--- a/Android/handdryer-app/build.gradle
+++ b/Android/handdryer-app/build.gradle
@@ -4,6 +4,13 @@ android {
     compileSdkVersion 19
     buildToolsVersion "19.0.3"
 
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
     defaultConfig {
         minSdkVersion 7
         targetSdkVersion 19
