--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ notifications:
   email: false
 
 before_install:
- - chmod +x ./Android/gradlew
+ - chmod +x Android/gradlew
   - sudo apt-get update -qq
   - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch > /dev/null; fi
 
