--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -3,14 +3,16 @@
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.9.+'
+        classpath 'com.android.tools.build:gradle:8.3.2'
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
+        google()
     }
 }
