--- a/Android/handdryer-app/src/main/AndroidManifest.xml
+++ b/Android/handdryer-app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="jp.tetra2000.handdryer.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
