--- a/Android/handdryer-app/build.gradle
+++ b/Android/handdryer-app/build.gradle
@@ -5,24 +5,22 @@ android {
     defaultConfig {
         compileSdk = 34
     }
-    lintOptions {
-        checkReleaseBuilds false
-        // Or, if you prefer, you can continue to check for errors in release builds,
-        // but continue the build even when errors are found:
-        abortOnError false
-    }
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 34
-        versionCode 3
-        versionName "1.0.2"
+        targetSdkVersion 35
+        versionCode 4
+        versionName "1.0.3"
     }
     buildTypes {
         release {
 //            runProguard false
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    lint {
+        abortOnError false
+        checkReleaseBuilds false
     }
 }
 
